# solutionAnalysis

./: .gitignore  README.md  environment.yml  meson.build  pyproject.toml  run_formatter.sh
.github/workflows/: ci.yml
examples/hydrogen_bond_tcf/: hbond_tcf.py  lineplot.py
python_bindings/: bindings.cpp
resources/: Fe3_water_cluster.lammpstrj  oct.lammpstrj
soluanalysis/: __init__.py  hdf5_io.py  io.py  ion_pairs.py  misc.py
subprojects/: graph_lib.wrap  james.wrap
subprojects/solvlib/: add.cpp  meson.build
subprojects/solvlib/include/: add.hpp  system.hpp
tests/: conftest.py  test_add.py  test_avg_chunk.py  test_bonds.py  test_correlation.py  test_io.py  test_ion_pairs.py  test_network.py  test_pairtypes.py  test_system.py
