[tool.pdm]

[project]
name = "soluanalysis"
version = "0.0.1"
description = "Finds ions in solution, using Python and python bindings"
authors = [
    {name = "Amrita Goswami", email = "amrita@hi.is"},
]
dependencies = [
    "ase >= 3.22.1",
    "numpy",
    "h5py",
    "scipy"
    ]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
example = [
    "gdown",
    "spirit-extras",
    "matplotlib"
]

[project.urls]
"Source Code" = "https://github.com/amritagos/solutionAnalysis"
"Bug Tracker" = "https://github.com/amritagos/solutionAnalysis/issues"

[build-system]
requires = ["pybind11", "meson-python"]
build-backend = "mesonpy"
# Important, tells pip how to install the package
